fixed whitespacing layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@
   width: 53%;
   display: inline-block;
   position: relative;
-  top: 45px;
+  top: 10px;
   margin-left: 0px;
   float: left;
 }
@@ -189,7 +189,7 @@
   width: 43%;
   display: inline-block;
   float: right;
-  top: 145px;
+  top: 80px;
   margin-right: 0px;
   position: absolute;
 }
@@ -224,4 +224,3 @@
     transform: rotate(360deg);
   }
 }
-
